<resources>
    <string name="app_name">Watchly</string>
<!--  search page  -->
    <string name="find_next_movie_to_watch">Find next movie to watch</string>
    <string name="all">All</string>
    <string name="movie">Movie</string>
    <string name="series">Series</string>
    <string name="genres_scroll_to_see_more"><![CDATA[Genres (scroll to see more >>)]]></string>
    <string name="original_language">Original language</string>
    <string name="sort_by">Sort by</string>
    <string name="search_movies">Search movies</string>

<!--  login and register page  -->
    <string name="hello">Hello</string>
    <string name="sign_into_your_account">Sign into your Account</string>
    <string name="email">Email*</string>
    <string name="password">Password*</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="login">Login</string>
    <string name="or_login_using_social_media">Or login using social media</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="register_now">Register now</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name*</string>
    <string name="or_register_using_social_media">Or register using social media</string>
    <string name="already_have_an_account">Already have an account?</string>

    <!--  main page  -->
    <string name="discover">Discover</string>
    <string name="seen">Seen</string>
    <string name="search">Search</string>
    <string name="watchlist">Watchlist</string>
    <string name="movies">Movies</string>
    <string name="logout">Logout</string>
    <string name="movie_title">Movie Title</string>
    <string name="movie_description">Movie Description</string>
    <string name="release_date_yyyy_mm_dd">Release Date: YYYY-MM-DD</string>
    <string name="type_default">Type: default</string>
    <string name="language_default">Language: default</string>
    <string name="_0_0">⭐ 0.0</string>
    <string name="_0_votes">(0 votes)</string>
    <string name="genres_default">Genres: default</string>
    <string name="find_next_title_to_watch">Find next title to watch</string>
    <string name="enter_the_name_of_the_movie_or_series">Enter the name of the movie or series</string>
    <string name="or">OR</string>
    <string name="clear">CLEAR</string>
    <string name="search_btn">SEARCH</string>
    <string name="logout_text">Logout</string>
    <string name="seen_text">Seen</string>
    <string name="discover_text">Discover</string>
    <string name="search_text">Search</string>
    <string name="watchlist_text">Watchlist</string>
    <string name="register_now_text">Register Now</string>
    <string name="tytul">Tytul</string>
    <string name="textview">TextView</string>
</resources>