<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:src="@drawable/background_login_top" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:src="@drawable/background_login_bottom" />

    <TextView
        android:id="@+id/hello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="230dp"
        android:fontFamily="@font/josefin_sans"
        android:gravity="center"
        android:text="@string/hello"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/hello"
        android:fontFamily="@font/josefin_sans"
        android:gravity="center"
        android:text="@string/sign_into_your_account"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signin"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:hint="@string/email"
        android:paddingHorizontal="10dp"
        android:paddingVertical="30dp"
        android:textColor="@color/black"
        android:textColorHint="#5A5A5A" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingHorizontal="10dp"
        android:paddingVertical="30dp"
        android:textColor="@color/black"
        android:textColorHint="#5A5A5A" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginHorizontal="30dp"
        android:fontFamily="@font/josefin_sans"
        android:text="@string/forgot_your_password"
        android:textAlignment="viewEnd"
        android:textColor="#5A5A5A"
        android:textSize="16sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgotPassword"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_login"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/josefin_sans"
        android:gravity="center"
        android:paddingHorizontal="30dp"
        android:paddingVertical="15dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/others"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonLogin"
        android:fontFamily="@font/josefin_sans"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/or_login_using_social_media"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="normal" />

        <ImageView
            android:id="@+id/google"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_below="@id/others"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:src="@drawable/google" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/google"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/josefin_sans"
            android:layout_gravity="bottom"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginBottom="10dp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/registerNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/josefin_sans"
            android:layout_gravity="bottom"
            android:text="@string/register_now"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>