<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchListActivity">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#70FFFFFF"
        android:scaleType="fitXY"
        android:src="@drawable/search_background" />

    <View
        android:id="@+id/backgroundBlur"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#70FFFFFF" />

    <TextView
        android:id="@+id/pageTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/josefin_sans"
        android:paddingStart="30dp"
        android:paddingTop="30dp"
        android:paddingEnd="130dp"
        android:paddingBottom="5dp"
        android:text="@string/find_next_movie_to_watch"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="30dp"
        android:layout_height="2dp"
        android:background="#565656"
        app:layout_constraintTop_toBottomOf="@+id/pageTitle"
        tools:layout_editor_absoluteX="16dp" />

    <RadioGroup
        android:id="@+id/types"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foregroundGravity="center_vertical"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/view"
        android:layout_marginTop="20dp"
        tools:layout_editor_absoluteX="16dp">

        <RadioButton
            android:id="@+id/allTypesButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/search_movie_checked"
            android:button="@drawable/search_radio_button"
            android:checked="true"
            android:text="@string/all"
            android:paddingHorizontal="5dp" />

        <RadioButton
            android:id="@+id/movieButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginHorizontal="5dp"
            android:background="@drawable/search_movie_unchecked"
            android:button="@drawable/search_radio_button"
            android:checked="false"
            android:paddingHorizontal="10dp"
            android:text="@string/movie" />

        <RadioButton
            android:id="@+id/seriesButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/search_movie_unchecked"
            android:button="@drawable/search_radio_button"
            android:checked="false"
            android:paddingHorizontal="10dp"
            android:text="@string/series" />
    </RadioGroup>

    <TextView
        android:id="@+id/genreText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/josefin_sans"
        android:text="@string/genres_scroll_to_see_more"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:paddingHorizontal="30dp"
        android:paddingVertical="10dp"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/types" />

    <ImageView
        android:id="@+id/genreBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleX="1.1"
        android:src="@drawable/search_background_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genreText" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/genreRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/genreBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genreText"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        android:layout_marginHorizontal="2dp"
        app:spanCount="3"/>

    <TextView
        android:id="@+id/languageText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="30dp"
        android:paddingVertical="10dp"
        android:text="@string/original_language"
        android:fontFamily="@font/josefin_sans"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/genreBackground" />

    <ImageView
        android:id="@+id/languageBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleX="1.1"
        android:src="@drawable/search_background_field"
        app:layout_constraintTop_toBottomOf="@+id/languageText" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/languageRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="2dp"
        android:orientation="horizontal"
        android:scrollbars="horizontal"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="@+id/languageBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/languageText"
        app:spanCount="2" />

    <TextView
        android:id="@+id/sortText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/josefin_sans"
        android:paddingHorizontal="30dp"
        android:paddingVertical="10dp"
        android:text="@string/sort_by"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/languageBackground" />

    <ImageView
        android:id="@+id/sortBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleX="1.1"
        android:scaleY="0.6"
        android:layout_marginTop="-30dp"
        android:src="@drawable/search_background_field"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sortText" />

    <ImageView
        android:id="@+id/searchButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/search_button"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/sortBackground" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_movies"
        android:textColor="@color/white"
        android:fontFamily="@font/josefin_sans"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/searchButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/searchButton" />

</androidx.constraintlayout.widget.ConstraintLayout>